# SEKURO_Tugas_1_BertrandAurey_PROGRAMMING

./: .gitignore  README.md
soal/soal_1_oop/: core_mcu.cpp  core_mcu.hpp  mcu_program
src/oop_soal_1/: core_mcu.cpp  main.cpp
src/oop_soal_2/: mcu_system
src/oop_soal_2/include/: mcu.hpp  mcu_cam_controller.hpp  mcu_walker.hpp
src/oop_soal_2/src/: mcu.cpp  mcu_cam_controller.cpp  mcu_walker.cpp
src/ros_soal_1/l3/: CMakeLists.txt  package.xml
src/ros_soal_1/l3/src/: attacker.cpp  tank_system.cpp
src/stl_soal/: kode_robot.cpp
